compiler.output
Terminals unused in grammar

   INVALIDTOKEN
   RETURN
   UNKNOWN
   UNCLOSED_COMMENT
   UNCLOSED_QUOTE
   BOOL
   CHAR
   INT
   REAL


State 4 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 231 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_head decls compound_stat PERIOD
    2        | error

    3 program_head: PROGRAM ID LEFTPAREN ID COMMA ID RIGHTPAREN SEMICOLON
    4             | PROGRAM ID LEFTPAREN error RIGHTPAREN SEMICOLON
    5             | error SEMICOLON

    6 decls: const_decl_part type_decl_part var_decl_part proc_decl_part

    7 const_decl_part: /* empty */
    8                | CONST const_decl_list SEMICOLON
    9                | error SEMICOLON

   10 const_decl_list: const_decl
   11                | const_decl_list SEMICOLON const_decl

   12 const_decl: ID ISEQUAL expr

   13 type_decl_part: /* empty */
   14               | TYPE type_decl_list SEMICOLON
   15               | error SEMICOLON

   16 type_decl_list: /* empty */
   17               | type_decl
   18               | type_decl_list SEMICOLON type_decl

   19 type_decl: ID ISEQUAL type

   20 type: simple_type
   21     | structured_type

   22 simple_type: scalar_type
   23            | ID

   24 scalar_type: LEFTPAREN scalar_list RIGHTPAREN
   25            | LEFTPAREN error RIGHTPAREN

   26 scalar_list: ID
   27            | scalar_list COMMA ID

   28 structured_type: ARRAY closed_array_type OF type
   29                | RECORD field_list END
   30                | error END

   31 closed_array_type: LEFTBRACKET array_type RIGHTBRACKET
   32                  | LEFTBRACKET error RIGHTBRACKET

   33 array_type: expr
   34           | expr DOUBLEPERIOD expr

   35 field_list: field
   36           | field_list SEMICOLON field
   37           | error SEMICOLON field_list

   38 field: ID COLON type

   39 var_decl_part: /* empty */
   40              | VAR var_decl_list SEMICOLON
   41              | error SEMICOLON

   42 var_decl_list: var_decl
   43              | var_decl_list SEMICOLON var_decl

   44 var_decl: ID COLON type
   45         | ID COMMA var_decl

   46 proc_decl_part: /* empty */
   47               | proc_decl_list

   48 proc_decl_list: proc_decl
   49               | proc_decl_list proc_decl

   50 proc_decl: proc_heading decls compound_stat SEMICOLON

   51 proc_heading: PROCEDURE ID f_parm_decl SEMICOLON
   52             | FUNCTION ID f_parm_decl COLON ID SEMICOLON
   53             | error SEMICOLON

   54 f_parm_decl: LEFTPAREN f_parm_list RIGHTPAREN
   55            | LEFTPAREN error RIGHTPAREN
   56            | LEFTPAREN RIGHTPAREN

   57 f_parm_list: f_parm
   58            | f_parm_list SEMICOLON f_parm
   59            | error SEMICOLON f_parm_list

   60 f_parm: type COLON type
   61       | VAR type COLON type

   62 compound_stat: BEGIN_ stat_list END
   63              | error BEGIN_ stat_list END
   64              | BEGIN_ error END

   65 stat_list: stat
   66          | stat_list SEMICOLON stat
   67          | error SEMICOLON stat_list

   68 stat: simple_stat
   69     | struct_stat

   70 simple_stat: /* empty */
   71            | var ASSIGN expr
   72            | proc_invok
   73            | compound_stat

   74 proc_invok: plist_finvok RIGHTPAREN
   75           | ID LEFTPAREN RIGHTPAREN

   76 var: ID
   77    | var PERIOD ID
   78    | subscripted_var RIGHTBRACKET
   79    | error RIGHTBRACKET

   80 subscripted_var: var LEFTBRACKET expr
   81                | subscripted_var COMMA expr

   82 expr: simple_expr
   83     | expr ISEQUAL simple_expr
   84     | expr NOTEQUAL simple_expr
   85     | expr LESSTHANEQUALS simple_expr
   86     | expr LESSTHAN simple_expr
   87     | expr GREATERTHANEQUALS simple_expr
   88     | expr GREATERTHAN simple_expr

   89 simple_expr: term
   90            | PLUS term
   91            | MINUS term
   92            | simple_expr PLUS term
   93            | simple_expr MINUS term
   94            | simple_expr OR term

   95 term: factor
   96     | term MULTIPLY factor
   97     | term DIVIDE factor
   98     | term DIV factor
   99     | term MOD factor
  100     | term AND factor

  101 factor: var
  102       | unsigned_const
  103       | LEFTPAREN expr RIGHTPAREN
  104       | LEFTPAREN error RIGHTPAREN
  105       | func_invok
  106       | NOT factor

  107 unsigned_const: unsigned_num
  108               | STRING

  109 unsigned_num: INT_CONST
  110             | REAL_CONST

  111 func_invok: plist_finvok RIGHTPAREN
  112           | ID LEFTPAREN RIGHTPAREN

  113 plist_finvok: ID LEFTPAREN parm
  114             | plist_finvok COMMA parm

  115 parm: expr

  116 struct_stat: IF expr THEN matched_stat ELSE stat
  117            | IF expr THEN stat
  118            | WHILE expr DO stat
  119            | CONTINUE
  120            | EXIT

  121 matched_stat: simple_stat
  122             | IF expr THEN matched_stat ELSE matched_stat
  123             | WHILE expr DO matched_stat
  124             | CONTINUE
  125             | EXIT


Terminals, with rules where they appear

$end (0) 0
error (256) 2 4 5 9 15 25 30 32 37 41 53 55 59 63 64 67 79 104
AND (258) 100
ARRAY (259) 28
BEGIN_ (260) 62 63 64
CONST (261) 8
CONTINUE (262) 119 124
DO (263) 118 123
ELSE (264) 116 122
END (265) 29 30 62 63 64
EXIT (266) 120 125
FUNCTION (267) 52
IF (268) 116 117 122
NOT (269) 106
OF (270) 28
OR (271) 94
PROCEDURE (272) 51
PROGRAM (273) 3 4
RECORD (274) 29
THEN (275) 116 117 122
TYPE (276) 14
VAR (277) 40 61
WHILE (278) 118 123
ISEQUAL (279) 12 19 83
NOTEQUAL (280) 84
LESSTHAN (281) 86
GREATERTHAN (282) 88
LESSTHANEQUALS (283) 85
GREATERTHANEQUALS (284) 87
PLUS (285) 90 92
MINUS (286) 91 93
MULTIPLY (287) 96
DIVIDE (288) 97
DIV (289) 98
MOD (290) 99
ASSIGN (291) 71
LEFTPAREN (292) 3 4 24 25 54 55 56 75 103 104 112 113
RIGHTPAREN (293) 3 4 24 25 54 55 56 74 75 103 104 111 112
PERIOD (294) 1 77
SEMICOLON (295) 3 4 5 8 9 11 14 15 18 36 37 40 41 43 50 51 52 53 58
    59 66 67
COLON (296) 38 44 52 60 61
LEFTBRACKET (297) 31 32 80
RIGHTBRACKET (298) 31 32 78 79
COMMA (299) 3 27 45 81 114
DOUBLEPERIOD (300) 34
INVALIDTOKEN (301)
ID (302) 3 4 12 19 23 26 27 38 44 45 51 52 75 76 77 112 113
RETURN (303)
UNKNOWN (304)
UNCLOSED_COMMENT (305)
UNCLOSED_QUOTE (306)
INT_CONST (307) 109
REAL_CONST (308) 110
BOOL (309)
CHAR (310)
INT (311)
REAL (312)
STRING (313) 108


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1 2, on right: 0
program_head (61)
    on left: 3 4 5, on right: 1
decls (62)
    on left: 6, on right: 1 50
const_decl_part (63)
    on left: 7 8 9, on right: 6
const_decl_list (64)
    on left: 10 11, on right: 8 11
const_decl (65)
    on left: 12, on right: 10 11
type_decl_part (66)
    on left: 13 14 15, on right: 6
type_decl_list (67)
    on left: 16 17 18, on right: 14 18
type_decl (68)
    on left: 19, on right: 17 18
type (69)
    on left: 20 21, on right: 19 28 38 44 60 61
simple_type (70)
    on left: 22 23, on right: 20
scalar_type (71)
    on left: 24 25, on right: 22
scalar_list (72)
    on left: 26 27, on right: 24 27
structured_type (73)
    on left: 28 29 30, on right: 21
closed_array_type (74)
    on left: 31 32, on right: 28
array_type (75)
    on left: 33 34, on right: 31
field_list (76)
    on left: 35 36 37, on right: 29 36 37
field (77)
    on left: 38, on right: 35 36
var_decl_part (78)
    on left: 39 40 41, on right: 6
var_decl_list (79)
    on left: 42 43, on right: 40 43
var_decl (80)
    on left: 44 45, on right: 42 43 45
proc_decl_part (81)
    on left: 46 47, on right: 6
proc_decl_list (82)
    on left: 48 49, on right: 47 49
proc_decl (83)
    on left: 50, on right: 48 49
proc_heading (84)
    on left: 51 52 53, on right: 50
f_parm_decl (85)
    on left: 54 55 56, on right: 51 52
f_parm_list (86)
    on left: 57 58 59, on right: 54 58 59
f_parm (87)
    on left: 60 61, on right: 57 58
compound_stat (88)
    on left: 62 63 64, on right: 1 50 73
stat_list (89)
    on left: 65 66 67, on right: 62 63 66 67
stat (90)
    on left: 68 69, on right: 65 66 116 117 118
simple_stat (91)
    on left: 70 71 72 73, on right: 68 121
proc_invok (92)
    on left: 74 75, on right: 72
var (93)
    on left: 76 77 78 79, on right: 71 77 80 101
subscripted_var (94)
    on left: 80 81, on right: 78 81
expr (95)
    on left: 82 83 84 85 86 87 88, on right: 12 33 34 71 80 81 83 84
    85 86 87 88 103 115 116 117 118 122 123
simple_expr (96)
    on left: 89 90 91 92 93 94, on right: 82 83 84 85 86 87 88 92 93
    94
term (97)
    on left: 95 96 97 98 99 100, on right: 89 90 91 92 93 94 96 97
    98 99 100
factor (98)
    on left: 101 102 103 104 105 106, on right: 95 96 97 98 99 100
    106
unsigned_const (99)
    on left: 107 108, on right: 102
unsigned_num (100)
    on left: 109 110, on right: 107
func_invok (101)
    on left: 111 112, on right: 105
plist_finvok (102)
    on left: 113 114, on right: 74 111 114
parm (103)
    on left: 115, on right: 113 114
struct_stat (104)
    on left: 116 117 118 119 120, on right: 69
matched_stat (105)
    on left: 121 122 123 124 125, on right: 116 122 123


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    program       go to state 3
    program_head  go to state 4


state 1

    2 program: error .
    5 program_head: error . SEMICOLON

    SEMICOLON  shift, and go to state 5

    $default  reduce using rule 2 (program)


state 2

    3 program_head: PROGRAM . ID LEFTPAREN ID COMMA ID RIGHTPAREN SEMICOLON
    4             | PROGRAM . ID LEFTPAREN error RIGHTPAREN SEMICOLON

    ID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: program_head . decls compound_stat PERIOD

    error  shift, and go to state 8
    CONST  shift, and go to state 9

    error      [reduce using rule 7 (const_decl_part)]
    BEGIN_     reduce using rule 7 (const_decl_part)
    FUNCTION   reduce using rule 7 (const_decl_part)
    PROCEDURE  reduce using rule 7 (const_decl_part)
    TYPE       reduce using rule 7 (const_decl_part)
    VAR        reduce using rule 7 (const_decl_part)

    decls            go to state 10
    const_decl_part  go to state 11


state 5

    5 program_head: error SEMICOLON .

    $default  reduce using rule 5 (program_head)


state 6

    3 program_head: PROGRAM ID . LEFTPAREN ID COMMA ID RIGHTPAREN SEMICOLON
    4             | PROGRAM ID . LEFTPAREN error RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 12


state 7

    0 $accept: program $end .

    $default  accept


state 8

    9 const_decl_part: error . SEMICOLON

    SEMICOLON  shift, and go to state 13


state 9

    8 const_decl_part: CONST . const_decl_list SEMICOLON

    ID  shift, and go to state 14

    const_decl_list  go to state 15
    const_decl       go to state 16


state 10

    1 program: program_head decls . compound_stat PERIOD

    error   shift, and go to state 17
    BEGIN_  shift, and go to state 18

    compound_stat  go to state 19


state 11

    6 decls: const_decl_part . type_decl_part var_decl_part proc_decl_part

    error  shift, and go to state 20
    TYPE   shift, and go to state 21

    error      [reduce using rule 13 (type_decl_part)]
    BEGIN_     reduce using rule 13 (type_decl_part)
    FUNCTION   reduce using rule 13 (type_decl_part)
    PROCEDURE  reduce using rule 13 (type_decl_part)
    VAR        reduce using rule 13 (type_decl_part)

    type_decl_part  go to state 22


state 12

    3 program_head: PROGRAM ID LEFTPAREN . ID COMMA ID RIGHTPAREN SEMICOLON
    4             | PROGRAM ID LEFTPAREN . error RIGHTPAREN SEMICOLON

    error  shift, and go to state 23
    ID     shift, and go to state 24


state 13

    9 const_decl_part: error SEMICOLON .

    $default  reduce using rule 9 (const_decl_part)


state 14

   12 const_decl: ID . ISEQUAL expr

    ISEQUAL  shift, and go to state 25


state 15

    8 const_decl_part: CONST const_decl_list . SEMICOLON
   11 const_decl_list: const_decl_list . SEMICOLON const_decl

    SEMICOLON  shift, and go to state 26


state 16

   10 const_decl_list: const_decl .

    $default  reduce using rule 10 (const_decl_list)


state 17

   63 compound_stat: error . BEGIN_ stat_list END

    BEGIN_  shift, and go to state 27


state 18

   62 compound_stat: BEGIN_ . stat_list END
   64              | BEGIN_ . error END

    error     shift, and go to state 28
    BEGIN_    shift, and go to state 18
    CONTINUE  shift, and go to state 29
    EXIT      shift, and go to state 30
    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    ID        shift, and go to state 33

    END        reduce using rule 70 (simple_stat)
    SEMICOLON  reduce using rule 70 (simple_stat)

    compound_stat    go to state 34
    stat_list        go to state 35
    stat             go to state 36
    simple_stat      go to state 37
    proc_invok       go to state 38
    var              go to state 39
    subscripted_var  go to state 40
    plist_finvok     go to state 41
    struct_stat      go to state 42


state 19

    1 program: program_head decls compound_stat . PERIOD

    PERIOD  shift, and go to state 43


state 20

   15 type_decl_part: error . SEMICOLON

    SEMICOLON  shift, and go to state 44


state 21

   14 type_decl_part: TYPE . type_decl_list SEMICOLON

    ID  shift, and go to state 45

    $default  reduce using rule 16 (type_decl_list)

    type_decl_list  go to state 46
    type_decl       go to state 47


state 22

    6 decls: const_decl_part type_decl_part . var_decl_part proc_decl_part

    error  shift, and go to state 48
    VAR    shift, and go to state 49

    error      [reduce using rule 39 (var_decl_part)]
    BEGIN_     reduce using rule 39 (var_decl_part)
    FUNCTION   reduce using rule 39 (var_decl_part)
    PROCEDURE  reduce using rule 39 (var_decl_part)

    var_decl_part  go to state 50


state 23

    4 program_head: PROGRAM ID LEFTPAREN error . RIGHTPAREN SEMICOLON

    RIGHTPAREN  shift, and go to state 51


state 24

    3 program_head: PROGRAM ID LEFTPAREN ID . COMMA ID RIGHTPAREN SEMICOLON

    COMMA  shift, and go to state 52


state 25

   12 const_decl: ID ISEQUAL . expr

    error       shift, and go to state 53
    NOT         shift, and go to state 54
    PLUS        shift, and go to state 55
    MINUS       shift, and go to state 56
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    expr             go to state 63
    simple_expr      go to state 64
    term             go to state 65
    factor           go to state 66
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 26

    8 const_decl_part: CONST const_decl_list SEMICOLON .
   11 const_decl_list: const_decl_list SEMICOLON . const_decl

    ID  shift, and go to state 14

    $default  reduce using rule 8 (const_decl_part)

    const_decl  go to state 71


state 27

   63 compound_stat: error BEGIN_ . stat_list END

    error     shift, and go to state 72
    BEGIN_    shift, and go to state 18
    CONTINUE  shift, and go to state 29
    EXIT      shift, and go to state 30
    IF        shift, and go to state 31
    WHILE     shift, and go to state 32
    ID        shift, and go to state 33

    END        reduce using rule 70 (simple_stat)
    SEMICOLON  reduce using rule 70 (simple_stat)

    compound_stat    go to state 34
    stat_list        go to state 73
    stat             go to state 36
    simple_stat      go to state 37
    proc_invok       go to state 38
    var              go to state 39
    subscripted_var  go to state 40
    plist_finvok     go to state 41
    struct_stat      go to state 42


state 28

   63 compound_stat: error . BEGIN_ stat_list END
   64              | BEGIN_ error . END
   67 stat_list: error . SEMICOLON stat_list
   79 var: error . RIGHTBRACKET

    BEGIN_        shift, and go to state 27
    END           shift, and go to state 74
    SEMICOLON     shift, and go to state 75
    RIGHTBRACKET  shift, and go to state 76


state 29

  119 struct_stat: CONTINUE .

    $default  reduce using rule 119 (struct_stat)


state 30

  120 struct_stat: EXIT .

    $default  reduce using rule 120 (struct_stat)


state 31

  116 struct_stat: IF . expr THEN matched_stat ELSE stat
  117            | IF . expr THEN stat

    error       shift, and go to state 53
    NOT         shift, and go to state 54
    PLUS        shift, and go to state 55
    MINUS       shift, and go to state 56
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    expr             go to state 77
    simple_expr      go to state 64
    term             go to state 65
    factor           go to state 66
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 32

  118 struct_stat: WHILE . expr DO stat

    error       shift, and go to state 53
    NOT         shift, and go to state 54
    PLUS        shift, and go to state 55
    MINUS       shift, and go to state 56
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    expr             go to state 78
    simple_expr      go to state 64
    term             go to state 65
    factor           go to state 66
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 33

   75 proc_invok: ID . LEFTPAREN RIGHTPAREN
   76 var: ID .
  113 plist_finvok: ID . LEFTPAREN parm

    LEFTPAREN  shift, and go to state 79

    $default  reduce using rule 76 (var)


state 34

   73 simple_stat: compound_stat .

    $default  reduce using rule 73 (simple_stat)


state 35

   62 compound_stat: BEGIN_ stat_list . END
   66 stat_list: stat_list . SEMICOLON stat

    END        shift, and go to state 80
    SEMICOLON  shift, and go to state 81


state 36

   65 stat_list: stat .

    $default  reduce using rule 65 (stat_list)


state 37

   68 stat: simple_stat .

    $default  reduce using rule 68 (stat)


state 38

   72 simple_stat: proc_invok .

    $default  reduce using rule 72 (simple_stat)


state 39

   71 simple_stat: var . ASSIGN expr
   77 var: var . PERIOD ID
   80 subscripted_var: var . LEFTBRACKET expr

    ASSIGN       shift, and go to state 82
    PERIOD       shift, and go to state 83
    LEFTBRACKET  shift, and go to state 84


state 40

   78 var: subscripted_var . RIGHTBRACKET
   81 subscripted_var: subscripted_var . COMMA expr

    RIGHTBRACKET  shift, and go to state 85
    COMMA         shift, and go to state 86


state 41

   74 proc_invok: plist_finvok . RIGHTPAREN
  114 plist_finvok: plist_finvok . COMMA parm

    RIGHTPAREN  shift, and go to state 87
    COMMA       shift, and go to state 88


state 42

   69 stat: struct_stat .

    $default  reduce using rule 69 (stat)


state 43

    1 program: program_head decls compound_stat PERIOD .

    $default  reduce using rule 1 (program)


state 44

   15 type_decl_part: error SEMICOLON .

    $default  reduce using rule 15 (type_decl_part)


state 45

   19 type_decl: ID . ISEQUAL type

    ISEQUAL  shift, and go to state 89


state 46

   14 type_decl_part: TYPE type_decl_list . SEMICOLON
   18 type_decl_list: type_decl_list . SEMICOLON type_decl

    SEMICOLON  shift, and go to state 90


state 47

   17 type_decl_list: type_decl .

    $default  reduce using rule 17 (type_decl_list)


state 48

   41 var_decl_part: error . SEMICOLON

    SEMICOLON  shift, and go to state 91


state 49

   40 var_decl_part: VAR . var_decl_list SEMICOLON

    ID  shift, and go to state 92

    var_decl_list  go to state 93
    var_decl       go to state 94


state 50

    6 decls: const_decl_part type_decl_part var_decl_part . proc_decl_part

    error      shift, and go to state 95
    FUNCTION   shift, and go to state 96
    PROCEDURE  shift, and go to state 97

    error   [reduce using rule 46 (proc_decl_part)]
    BEGIN_  reduce using rule 46 (proc_decl_part)

    proc_decl_part  go to state 98
    proc_decl_list  go to state 99
    proc_decl       go to state 100
    proc_heading    go to state 101


state 51

    4 program_head: PROGRAM ID LEFTPAREN error RIGHTPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 102


state 52

    3 program_head: PROGRAM ID LEFTPAREN ID COMMA . ID RIGHTPAREN SEMICOLON

    ID  shift, and go to state 103


state 53

   79 var: error . RIGHTBRACKET

    RIGHTBRACKET  shift, and go to state 76


state 54

  106 factor: NOT . factor

    error       shift, and go to state 53
    NOT         shift, and go to state 54
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    factor           go to state 104
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 55

   90 simple_expr: PLUS . term

    error       shift, and go to state 53
    NOT         shift, and go to state 54
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    term             go to state 105
    factor           go to state 66
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 56

   91 simple_expr: MINUS . term

    error       shift, and go to state 53
    NOT         shift, and go to state 54
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    term             go to state 106
    factor           go to state 66
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 57

  103 factor: LEFTPAREN . expr RIGHTPAREN
  104       | LEFTPAREN . error RIGHTPAREN

    error       shift, and go to state 107
    NOT         shift, and go to state 54
    PLUS        shift, and go to state 55
    MINUS       shift, and go to state 56
    LEFTPAREN   shift, and go to state 57
    ID          shift, and go to state 58
    INT_CONST   shift, and go to state 59
    REAL_CONST  shift, and go to state 60
    STRING      shift, and go to state 61

    var              go to state 62
    subscripted_var  go to state 40
    expr             go to state 108
    simple_expr      go to state 64
    term             go to state 65
    factor           go to state 66
    unsigned_const   go to state 67
    unsigned_num     go to state 68
    func_invok       go to state 69
    plist_finvok     go to state 70


state 58

   76 var: ID .
  112 func_invok: ID . LEFTPAREN RIGHTPAREN
  113 plist_finvok: ID . LEFTPAREN parm

    LEFTPAREN  shift, and go to state 109

    $default  reduce using rule 76 (var)


state 59

  109 unsigned_num: INT_CONST .

    $default  reduce using rule 109 (unsigned_num)


state 60

  110 unsigned_num: REAL_CONST .

    $default  reduce using rule 110 (unsigned_num)


state 61

  108 unsigned_const: STRING .

    $default  reduce using rule 108 (unsigned_const)


state 62

   77 var: var . PERIOD ID
   80 subscripted_var: var . LEFTBRACKET expr
  101 factor: var .

    PERIOD       shift, and go to state 83
    LEFTBRACKET  shift, and go to state 84

    $default  reduce using rule 101 (factor)


state 63

   12 const_decl: ID ISEQUAL expr .
   83 expr: expr . ISEQUAL simple_expr
   84     | expr . NOTEQUAL simple_expr
   85     | expr . LESSTHANEQUALS simple_expr
   86     | expr . LESSTHAN simple_expr
   87     | expr . GREATERTHANEQUALS simple_expr
   88     | expr . GREATERTHAN simple_expr

    ISEQUAL            shift, and go to state 110
    NOTEQUAL           shift, and go to state 111
    LESSTHAN           shift, and go to state 112
    GREATERTHAN        shift, and go to state 113
    LESSTHANEQUALS     shift, and go to state 114
    GREATERTHANEQUALS  shift, and go to state 115

    $default  reduce using rule 12 (const_decl)


state 64

   82 expr: simple_expr .
   92 simple_expr: simple_expr . PLUS term
   93            | simple_expr . MINUS term
   94            | simple_expr . OR term
